# ChangeLog for sci-geosciences/googleearth
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/googleearth/ChangeLog,v 1.58 2014/02/08 15:56:20 mschiff Exp $

*googleearth-7.1.2.2041 (08 Feb 2014)

  08 Feb 2014; Marc Schiffbauer <mschiff@gentoo.org>
  -googleearth-5.1.3535.3218-r1.ebuild, -googleearth-5.2.1.1588.ebuild,
  -googleearth-6.0.2.2074.ebuild, -googleearth-6.0.3.2197.ebuild,
  -googleearth-6.2.2.6613.ebuild, -googleearth-7.0.2.8415.ebuild,
  -googleearth-7.0.2.8415-r2.ebuild, -googleearth-7.0.3.8542.ebuild,
  -googleearth-7.1.1.1580.ebuild, -googleearth-7.1.1.1871.ebuild,
  -googleearth-7.1.1.1888.ebuild, +googleearth-7.1.2.2041.ebuild,
  -files/googleearth-7.0.2.8415-desktopfile.patch,
  -files/googleearth-7.0.3.8542-desktopfile.patch,
  -files/googleearth-7.1.1.1580-desktopfile.patch,
  -files/googleearth-7.1.1.1871-desktopfile.patch,
  +files/googleearth-7-desktopfile.patch, -files/decimal-separator.patch,
  -files/mime-magic.patch, metadata.xml:
  Bump version. Remove old ebuilds.

  31 Jan 2014; Marc Schiffbauer <mschiff@gentoo.org> metadata.xml:
  added myself as maintainer

  11 Dec 2013; Julian Ospald <hasufell@gentoo.org> metadata.xml:
  update maintainer

*googleearth-7.1.1.1888 (18 Aug 2013)

  18 Aug 2013; Zac Medico <zmedico@gentoo.org> +googleearth-7.1.1.1888.ebuild:
  7.1.1.1888 version bump.

  06 Aug 2013; Ulrich Müller <ulm@gentoo.org>
  googleearth-5.1.3535.3218-r1.ebuild, googleearth-5.2.1.1588.ebuild,
  googleearth-6.0.2.2074.ebuild, googleearth-6.0.3.2197.ebuild,
  googleearth-6.2.2.6613.ebuild, googleearth-7.0.2.8415.ebuild,
  googleearth-7.0.2.8415-r2.ebuild, googleearth-7.0.3.8542.ebuild:
  Remove gcc[-nocxx] from dependencies, the nocxx flag is gone.

*googleearth-7.1.1.1871 (01 Jul 2013)

  01 Jul 2013; Julian Ospald <hasufell@gentoo.org>
  +googleearth-7.1.1.1871.ebuild,
  +files/googleearth-7.1.1.1871-desktopfile.patch:
  version bump wrt #475414
